--- a/assets/scss/horizon/_home.scss
+++ b/assets/scss/horizon/_home.scss
@@ -5,7 +5,7 @@
 .wrapper-banner {
 	width: 100%;
 	overflow: hidden;
-	margin: -$header-height 0 0 0 !important;
+	margin:0 !important;
 	float:left;
 }
 
@@ -280,7 +280,7 @@
 
 	.menu-item {
 		display: inline-block;
-		
+
 		a {
 			text-decoration: none;
 		}
@@ -369,157 +369,6 @@
 .load-more {
 	clear: both;
 	text-align: center;
-}
-
-#blog {
-
-	.container {
-		padding: 120px 0;
-		border-top: 10px solid #f1f1f1;
-	}
-
-	.blog-item {
-		max-width: 577px;
-		margin: 75px auto 85px;
-		border: 11px solid transparent;
-		-webkit-transition: border .3s;
-		transition: border .3s;
-
-		@media (min-width: $screen-md-min) {
-			margin-left: 0;
-			margin-right: 0;
-		}
-		
-		&:hover {
-			border-color: #f1f1f1;
-		}
-
-		.blog-item-content {
-			padding: 30px 45px 35px;
-		}
-
-		.blog-item-image {
-			position: relative;
-			overflow: hidden;
-			border-bottom: 5px solid $secondaryColor;
-
-			&:after {
-				content: '';
-				display: block;
-				width: 60px;
-				height: 47px;
-				position: absolute;
-				top: 0;
-				left: 50%;
-				margin-left: -30px;
-				background: no-repeat center center;
-				//Regra separada para ser editável
-				background-image: url('assets/images/blog/icon-blog.png');
-			}
-		}
-
-		.blog-item-header {
-			text-align: center;
-			margin-bottom: 35px;
-			color: $ligthGray;
-
-			.blog-item-title {
-				font-size: 17px;
-				font-weight: 700;
-				margin: 0;
-				text-transform: uppercase;
-			}
-
-			.sep {
-				display: block;
-				width: 240px;
-				height: 1px;
-				margin: 30px auto 20px;
-				background: $secondaryColor;
-			}
-
-			.blog-item-publish-date {
-				font-size: 11px;
-				font-weight: 600;
-			}
-		}
-
-		.blog-item-excerpt {
-			font-size: 12px;
-			font-weight: 600;
-			margin-bottom: 40px;
-			color: $ligthGray;
-		}
-
-		.btn-blog-item {
-			font-size: 11px;
-			font-weight: 700;
-			width: 100%;
-			padding: 0;
-			height: 40px;
-		}
-
-		.blog-item-footer {
-			margin: 40px -5px 0;
-			font-size: 10px;
-			text-transform: uppercase;
-			color: $ligthGray;
-
-			&:after {
-				content: '';
-				display: block;
-				clear: both;
-			}
-
-			span {
-				padding: 0 5px;
-				line-height: 2em;
-				@media (min-width: $screen-lg-min) {
-					line-height: normal;
-				}
-			}
-
-			a {
-				color: $ligthGray;
-				text-decoration: none;
-				-webkit-transition: all .3s;
-				transition: all .3s;
-
-				&:hover {
-					color: $secondaryColor;
-				}
-			}
-
-			.fa {
-				font-size: 13px;
-				margin: 0 5px;
-
-				&:hover {
-					text-decoration: none;
-				}
-			}
-
-			.blog-item-comments {
-				display: block;
-
-				.fa {
-					margin: 0;
-					padding: 0 0 0 10px;
-				}
-
-				@media (min-width: $screen-sm-min) {
-					display: inline;
-					border-left: 1px solid $secondaryColor;
-				}
-			}
-
-			.blog-item-share {
-				@media (min-width: $screen-lg-min) {
-					float: right;
-				}
-			}
-		}
-	}
 }
 
 /* Contact section */
