--- a/style.css
+++ b/style.css
@@ -5789,16 +5789,15 @@ body {
 
 /* =Header
 -------------------------------------------------------------- */
-header {
-  position: relative;
-}
-
 #main-navigation {
   font-size: 12px;
   background-color: rgba(41, 44, 46, 0.9);
   padding: 0px;
   margin: 0px;
   height: auto;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 .navbar-brand {
@@ -5934,7 +5933,7 @@ header {
 .wrapper-banner {
   width: 100%;
   overflow: hidden;
-  margin: -128px 0 0 0 !important;
+  margin: 0 !important;
   float: left;
 }
 
@@ -6270,136 +6269,6 @@ header {
 .load-more {
   clear: both;
   text-align: center;
-}
-
-#blog .container {
-  padding: 120px 0;
-  border-top: 10px solid #f1f1f1;
-}
-#blog .blog-item {
-  max-width: 577px;
-  margin: 75px auto 85px;
-  border: 11px solid transparent;
-  -webkit-transition: border .3s;
-  transition: border .3s;
-}
-@media (min-width: 992px) {
-  #blog .blog-item {
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-#blog .blog-item:hover {
-  border-color: #f1f1f1;
-}
-#blog .blog-item .blog-item-content {
-  padding: 30px 45px 35px;
-}
-#blog .blog-item .blog-item-image {
-  position: relative;
-  overflow: hidden;
-  border-bottom: 5px solid #aac54b;
-}
-#blog .blog-item .blog-item-image:after {
-  content: '';
-  display: block;
-  width: 60px;
-  height: 47px;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  margin-left: -30px;
-  background: no-repeat center center;
-  background-image: url("assets/images/blog/icon-blog.png");
-}
-#blog .blog-item .blog-item-header {
-  text-align: center;
-  margin-bottom: 35px;
-  color: #9f9f9f;
-}
-#blog .blog-item .blog-item-header .blog-item-title {
-  font-size: 17px;
-  font-weight: 700;
-  margin: 0;
-  text-transform: uppercase;
-}
-#blog .blog-item .blog-item-header .sep {
-  display: block;
-  width: 240px;
-  height: 1px;
-  margin: 30px auto 20px;
-  background: #aac54b;
-}
-#blog .blog-item .blog-item-header .blog-item-publish-date {
-  font-size: 11px;
-  font-weight: 600;
-}
-#blog .blog-item .blog-item-excerpt {
-  font-size: 12px;
-  font-weight: 600;
-  margin-bottom: 40px;
-  color: #9f9f9f;
-}
-#blog .blog-item .btn-blog-item {
-  font-size: 11px;
-  font-weight: 700;
-  width: 100%;
-  padding: 0;
-  height: 40px;
-}
-#blog .blog-item .blog-item-footer {
-  margin: 40px -5px 0;
-  font-size: 10px;
-  text-transform: uppercase;
-  color: #9f9f9f;
-}
-#blog .blog-item .blog-item-footer:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-#blog .blog-item .blog-item-footer span {
-  padding: 0 5px;
-  line-height: 2em;
-}
-@media (min-width: 1200px) {
-  #blog .blog-item .blog-item-footer span {
-    line-height: normal;
-  }
-}
-#blog .blog-item .blog-item-footer a {
-  color: #9f9f9f;
-  text-decoration: none;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-}
-#blog .blog-item .blog-item-footer a:hover {
-  color: #aac54b;
-}
-#blog .blog-item .blog-item-footer .fa {
-  font-size: 13px;
-  margin: 0 5px;
-}
-#blog .blog-item .blog-item-footer .fa:hover {
-  text-decoration: none;
-}
-#blog .blog-item .blog-item-footer .blog-item-comments {
-  display: block;
-}
-#blog .blog-item .blog-item-footer .blog-item-comments .fa {
-  margin: 0;
-  padding: 0 0 0 10px;
-}
-@media (min-width: 768px) {
-  #blog .blog-item .blog-item-footer .blog-item-comments {
-    display: inline;
-    border-left: 1px solid #aac54b;
-  }
-}
-@media (min-width: 1200px) {
-  #blog .blog-item .blog-item-footer .blog-item-share {
-    float: right;
-  }
 }
 
 /* Contact section */
